# tex2lambda_web

./: .gitignore  README.md  app.py  log  pyproject.toml  requirements.txt
static/: main.css
templates/: base.html  success.html  upload.html
