[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Xavier"]
readme = "README.md"
packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
tex2lambda = { git = "https://github.com/lambda-feedback/content-conversion"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
